add_executable(nx-iperf
    main.cpp
    Size.hpp
    Size.cpp
    Socket.hpp
    Socket.cpp
    Statistics.hpp
    Statistics.cpp
    Executable.hpp
    Executable.cpp
    SignalHandler.hpp
    SignalHandler.cpp
    Configuration.hpp
    Configuration.cpp
    Application.hpp
    Application.cpp
    Sender.hpp
    Sender.cpp
    Receiver.hpp
    Receiver.cpp)

target_link_libraries(nx-iperf
    ${Boost_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT})
